--- a/front/src/app/pages/home/home.component.html
+++ b/front/src/app/pages/home/home.component.html
@@ -1,5 +1,7 @@
 <div class="center">
-  <img src="/assets/logo_p6.png" alt="logo" />
-  <h1>Welcome to MDD</h1>
-  <button mat-raised-button color="primary" (click)="start()">Commencer</button>
+  <img src="/assets/logo_p6.png" alt="logo" width="600px" />
+  <div>
+    <button mat-stroked-button color="black" style="border-color: black;" routerLink="/login">Se connecter</button>
+    <button mat-stroked-button href color="black" style="border-color: black;" routerLink="/register">S'inscrire</button>
+  </div>
 </div>
