--- a/front/src/app/pages/login/login.component.html
+++ b/front/src/app/pages/login/login.component.html
@@ -1,29 +1,50 @@
-<div class="center">
-    <img src="/assets/logo_p6.png" width="200px" alt="logo" />
-    <mat-icon aria-hidden="false" aria-label="Retourner à la page home" routerLink="/" fontIcon="keyboard_backspace"></mat-icon>
-    <h1>Se connecter</h1>
+<div class="center" class="flex flex-col justify-center items-center tracking-wider" [ngClass]="{'p-12': isSmallScreen}">
+    <div *ngIf="isLargeScreen" class="w-screen">
+      <img src="/assets/logo_p6.png" width="200px" alt="logo" />
+      <hr class="border-black opacity-100">
+    </div>
 
-    <form [formGroup]="form" (ngSubmit)="submit()">
-      <mat-form-field>
-        <mat-label>Email ou Nom d'utilisateur</mat-label>
-        <input matInput formControlName="emailOrUsername">
-        <mat-error *ngIf="form.get('emailOrUsername')?.hasError('required')">
-          Ce champ est requis.
-        </mat-error>
-      </mat-form-field>
-      <mat-form-field>
-        <mat-label>Mot de passe</mat-label>
-        <input matInput type="password" formControlName="password">
-        <mat-error *ngIf="form.get('password')?.hasError('required')">
-          Ce champ est requis.
-        </mat-error>
-      </mat-form-field>
-      <button mat-raised-button color="primary" type="submit" [disabled]="loading">
-        {{ loading ? 'Connexion en cours...' : 'Se connecter' }}
-      </button>
-    </form>
+    <div *ngIf="isSmallScreen" class="w-full flex flex-col gap-6">
+      <mat-icon aria-hidden="false" aria-label="Retourner à la page home" routerLink="/" fontIcon="keyboard_backspace" style="transform: scale(2); cursor: pointer;"></mat-icon>
+      <div class="w-full flex justify-center">
+        <img src="/assets/logo_p6.png" width="300px" alt="logo" />
+      </div>
+    </div>
 
-    <mat-error *ngIf="onError">
-      {{ errorMessage }}
-    </mat-error>
+    <div class="w-full flex flex-col gap-5" [ngClass]="{'p-12': isLargeScreen}">
+      <mat-icon *ngIf="isLargeScreen"aria-hidden="false" aria-label="Retourner à la page home" routerLink="/" fontIcon="keyboard_backspace"style="transform: scale(2)">
+      <span 
+        aria-hidden="false" 
+        aria-label="Retourner à la page home" 
+        routerLink="/" 
+        class="material-symbols-rounded" 
+        style="transform: scale(2); cursor: pointer;"
+      >
+        keyboard_backspace
+      </span>
+      </mat-icon>
+      <h1 class="text-center">Se connecter</h1>
+      <form [formGroup]="form" (ngSubmit)="submit()" class="w-full flex flex-col gap-6 items-center">
+          <div class="flex flex-col w-64">
+            <label>E-mail ou nom d'utilisateur</label>
+            <input matInput formControlName="emailOrUsername" class="custom-input">
+            <mat-error *ngIf="submitted && form.get('emailOrUsername')?.hasError('required')" class="text-xs mt-1">
+              Ce champ est requis.
+            </mat-error>
+          </div>
+          <div class="flex flex-col w-64">
+            <mat-label>Mot de passe</mat-label>
+            <input matInput type="password" formControlName="password" class="custom-input">
+            <mat-error *ngIf="submitted && form.get('password')?.hasError('required')" class="text-xs mt-1">
+              Ce champ est requis.
+            </mat-error>
+          </div>
+        <mat-error *ngIf="onError">
+          {{ errorMessage }}
+        </mat-error>
+        <button type="submit" [disabled]="loading" class="primary-btn">
+          {{ loading ? 'Connexion en cours...' : 'Se connecter' }}
+        </button>
+      </form>
+    </div>
   </div>
