--- a/front/src/app/pages/register/register.component.html
+++ b/front/src/app/pages/register/register.component.html
@@ -1,36 +1,52 @@
-<div class="center">
-  <img src="/assets/logo_p6.png" width="200px" alt="logo" />
-  <mat-icon aria-hidden="false" aria-label="Retourner à la page home" routerLink="/" fontIcon="keyboard_backspace"></mat-icon>
-  <h1>Inscription</h1>
+<div class="center" class="flex flex-col justify-center items-center tracking-wider" [ngClass]="{'p-12': isSmallScreen}">
+  <div *ngIf="isLargeScreen" class="w-screen">
+    <img src="/assets/logo_p6.png" width="200px" alt="logo" />
+    <hr class="border-black opacity-100">
+  </div>
 
-  <form [formGroup]="form" (ngSubmit)="submit()">
-    <mat-form-field>
-      <mat-label>Email</mat-label>
-      <input matInput formControlName="email">
-      <mat-error *ngIf="form.get('email')?.hasError('required')">
-        Ce champ est requis.
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Nom d'utilisateur</mat-label>
-      <input matInput formControlName="username">
-      <mat-error *ngIf="form.get('username')?.hasError('required')">
-        Ce champ est requis.
-      </mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label>Mot de passe</mat-label>
-      <input matInput type="password" formControlName="password">
-      <mat-error *ngIf="form.get('password')?.hasError('required')">
-        Ce champ est requis.
-      </mat-error>
-    </mat-form-field>
-    <button mat-raised-button color="primary" type="submit" [disabled]="loading">
-      {{ loading ? 'Inscription en cours...' : "S'inscrire" }}
-    </button>
-  </form>
+  <div *ngIf="isSmallScreen" class="w-full flex flex-col gap-6">
+    <mat-icon aria-hidden="false" aria-label="Retourner à la page home" routerLink="/" fontIcon="keyboard_backspace" style="transform: scale(2); cursor: pointer;">
+    <span aria-hidden="false" aria-label="Retourner à la page home" routerLink="/">
+      keyboard_backspace
+    </span>
+    </mat-icon>
+    <div class="w-full flex justify-center">
+      <img src="/assets/logo_p6.png" width="300px" alt="logo" />
+    </div>
+  </div>
 
-  <mat-error *ngIf="onError">
-    {{ errorMessage }}
-  </mat-error>
+  <div class="w-full flex flex-col gap-5" [ngClass]="{'p-12': isLargeScreen}">
+    <mat-icon *ngIf="isLargeScreen"aria-hidden="false" aria-label="Retourner à la page home" routerLink="/" fontIcon="keyboard_backspace"style="transform: scale(2)"
+    ></mat-icon>
+    <h1 class="text-center">Se connecter</h1>
+    <form [formGroup]="form" (ngSubmit)="submit()" class="w-full flex flex-col gap-6 items-center">
+        <div class="flex flex-col w-64">
+          <label>E-mail</label>
+          <input matInput formControlName="email" class="custom-input">
+          <mat-error *ngIf="submitted && form.get('email')?.hasError('required')" class="text-xs mt-1">
+            Ce champ est requis.
+          </mat-error>
+        </div>
+        <div class="flex flex-col w-64">
+          <label>Username</label>
+          <input matInput formControlName="username" class="custom-input">
+          <mat-error *ngIf="submitted && form.get('username')?.hasError('required')" class="text-xs mt-1">
+            Ce champ est requis.
+          </mat-error>
+        </div>
+        <div class="flex flex-col w-64">
+          <mat-label>Mot de passe</mat-label>
+          <input matInput type="password" formControlName="password" class="custom-input">
+          <mat-error *ngIf="submitted && form.get('password')?.hasError('required')" class="text-xs mt-1">
+            Ce champ est requis.
+          </mat-error>
+        </div>
+      <mat-error *ngIf="onError">
+        {{ errorMessage }}
+      </mat-error>
+      <button type="submit" [disabled]="loading" class="primary-btn">
+        {{ loading ? 'Inscription en cours...' : "S'inscrire" }}
+      </button>
+    </form>
+  </div>
 </div>
