--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -1,29 +1,49 @@
 h1 {
-    font-size: 24px;
-    font-weight: 400;
-    line-height: 29.05px;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 29.05px;
+}
+
+a {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19.36px;
+}
+
+p {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16.94px;
+  margin: 0;
+}
+
+.mat-card {
+  padding: 1em;
+  border-radius: 0.5em;
+  background-color: #F5F5F5;
+  box-shadow: none;
 }
 
 .custom-input {
-    border: 1px solid black;
-    border-radius: 0.375rem;
-    padding: 0.5rem;
+  border: 1px solid black;
+  border-radius: 0.375rem;
+  padding: 0.5rem;
 }
 
 .primary-btn {
-    color: white;
-    font-weight: 500;
-    background-color: #7763C5;
-    padding: 0.7em 1.5em;
-    border-radius: 0.7em;
-    transition: background-color 0.3s ease, transform 0.3s ease; 
+  color: white;
+  font-weight: 500;
+  background-color: #7763C5;
+  padding: 0.7em 1.5em;
+  border-radius: 0.7em;
+  transition: background-color 0.3s ease, transform 0.3s ease; 
 
-    &:hover {
-      background-color: #917de0;
-      transform: scale(1.05);
-    }
+  &:hover {
+    background-color: #917de0;
+    transform: scale(1.05);
+  }
 
-    &:active {
-      transform: scale(0.95);
-    }
+  &:active {
+    transform: scale(0.95);
+  }
 }
