--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -1,17 +1,17 @@
 <div class="w-screen">
-      <div *ngIf="isSmallScreen && isLoginOrRegisterPage" class="w-full flex flex-col gap-6 px-12">
+    <div *ngIf="isSmallScreen && isLoginOrRegisterPage" class="w-full flex flex-col gap-6 px-12">
         <mat-icon aria-hidden="false" aria-label="Retourner à la page home" routerLink="/" fontIcon="keyboard_backspace" style="transform: scale(2); cursor: pointer;"></mat-icon>
         <div class="w-full flex justify-center">
           <img src="/assets/logo_p6.png" width="300px" alt="logo" />
         </div>
-      </div>
+    </div>
 
-      <div *ngIf="isLargeScreen" class="w-screen">
+    <div *ngIf="isLargeScreen" class="w-screen">
         <div class="flex justify-between items-center px-5">
             <img src="/assets/logo_p6.png" width="200px" alt="logo" />
             <div class="flex gap-5" *ngIf="isOtherPage">
-                <a href="/articles">Articles</a>
-                <a href="/themes">Thèmes</a>
+                <a href="/articles" [ngClass]="{'text-[#6C5CCF]': currentUrl === '/articles'}">Articles</a>
+                <a href="/themes" [ngClass]="{'text-[#6C5CCF]': currentUrl === '/themes'}">Thèmes</a>
             </div>
         </div>
         <hr class="border-black opacity-100">
@@ -20,8 +20,16 @@
     <div *ngIf="isSmallScreen && isOtherPage" class="w-screen">
         <div class="flex items-center justify-between p-3">
             <img src="/assets/logo_p6.png" width="150px" alt="logo" />
-            <mat-icon aria-hidden="false" aria-label="Ouvrir le menu de navigation" fontIcon="menu" style="transform: scale(2); cursor: pointer;"></mat-icon>
+            <mat-icon aria-hidden="false" aria-label="Ouvrir le menu de navigation" fontIcon="menu" (click)="toggleNavbarModal()" style="transform: scale(2); cursor: pointer;"></mat-icon>
         </div>
         <hr class="border-black opacity-100">
+        <div *ngIf="openNavbarModal" [mat-dialog-close]="toggleNavbarModal()" class="fixed top-0 left-0 w-screen h-screen bg-gray-500 bg-opacity-50 flex items-center justify-center z-10">
+            <mat-dialog-content class="fixed top-0 right-0 h-screen w-2/3 bg-white px-5 py-12 border border-black">
+                <div class="flex flex-col gap-5 items-end">
+                    <a href="/articles">Articles</a>
+                    <a href="/themes">Thèmes</a>
+                </div>
+            </mat-dialog-content>
+        </div>
     </div>
 </div>
