--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -9,9 +9,14 @@
     <div *ngIf="isLargeScreen" class="w-screen">
         <div class="flex justify-between items-center px-5">
             <img src="/assets/logo_p6.png" width="200px" alt="logo" />
-            <div class="flex gap-5" *ngIf="isOtherPage">
+            <div class="flex gap-5 items-center" *ngIf="isOtherPage">
                 <a href="/articles" [ngClass]="{'text-[#6C5CCF]': currentUrl === '/articles'}">Articles</a>
                 <a href="/themes" [ngClass]="{'text-[#6C5CCF]': currentUrl === '/themes'}">Thèmes</a>
+                <div>
+                    <a href="/profile" class="flex items-center bg-[#D9D9D9] rounded-full p-3 text-[#00000080]" [ngClass]="{'text-[#7763C5] border border-4 border-[#7763C5]': currentUrl === '/profile'}">
+                        <mat-icon aria-hidden="false" aria-label="Aller sur la page profil" fontIcon="person_outline" style="transform: scale(1.8);"></mat-icon>
+                    </a>
+                </div>
             </div>
         </div>
         <hr class="border-black opacity-100">
