--- a/front/src/app/pages/articles/articles.component.html
+++ b/front/src/app/pages/articles/articles.component.html
@@ -3,7 +3,7 @@
 
     <div class="w-screen flex flex-col p-5 gap-5">
         <div class="w-full flex items-center justify-between gap-5" [ngClass]="{'flex-col': isSmallScreen}">
-            <button type="create" class="primary-btn">Créer un article</button>
+            <button type="button" class="primary-btn" routerLink="/articles/create" >Créer un article</button>
             <div class="flex items-center gap-2" (click)="sortArticles()" style="cursor: pointer;">
                 <p class="font-extrabold">Trier par</p>
                 <mat-icon *ngIf="!isAscendingOrder" aria-hidden="false" aria-label="Trier les articles par ordre dsc" fontIcon="south"></mat-icon>
@@ -13,7 +13,7 @@
         <div class="flex w-full">
             <p *ngIf="!articles || articles.length === 0">Il n'y a aucun article disponible pour le moment</p>
             <div class="w-full flex flex-wrap justify-between" [ngClass]="{'flex-col': isSmallScreen}">
-                <mat-card *ngFor="let article of articles" [ngStyle]="{'width': isLargeScreen ? 'calc(50% - 24px)' : '100%', 'margin-bottom': '24px'}">
+                <mat-card *ngFor="let article of articles" [routerLink]="['/articles/detail', article.id]" [ngStyle]="{'width': isLargeScreen ? 'calc(50% - 24px)' : '100%', 'margin-bottom': '24px'}" style="cursor: pointer;">
                     <h3 class="font-bold">{{ article.title }}</h3>
                     <div class="flex gap-12">
                         <p>{{ article.author }}</p>
