--- a/front/src/app/pages/register/register.component.html
+++ b/front/src/app/pages/register/register.component.html
@@ -3,7 +3,7 @@
   <div class="w-full flex flex-col gap-5" [ngClass]="{'p-12': isLargeScreen}">
     <mat-icon *ngIf="isLargeScreen"aria-hidden="false" aria-label="Retourner à la page home" routerLink="/" fontIcon="keyboard_backspace"style="transform: scale(2)"
     ></mat-icon>
-    <h1 class="text-center">Se connecter</h1>
+    <h1 class="text-center">S'inscrire</h1>
     <form [formGroup]="form" (ngSubmit)="submit()" class="w-full flex flex-col gap-6 items-center">
         <div class="flex flex-col w-64">
           <label>E-mail</label>
