--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -2,13 +2,13 @@
     <div *ngIf="isSmallScreen && isLoginOrRegisterPage" class="w-full flex flex-col gap-6 px-12">
         <mat-icon aria-hidden="false" aria-label="Retourner à la page home" routerLink="/" fontIcon="keyboard_backspace" style="transform: scale(2); cursor: pointer;"></mat-icon>
         <div class="w-full flex justify-center">
-          <img src="/assets/logo_p6.png" width="300px" alt="logo" />
+          <img src="/assets/logo_p6.png" (click)="redirectToArticlePage()" style="cursor: pointer;" width="300px" alt="logo" />
         </div>
     </div>
 
     <div *ngIf="isLargeScreen" class="w-screen">
         <div class="flex justify-between items-center px-5">
-            <img src="/assets/logo_p6.png" width="200px" alt="logo" />
+            <img src="/assets/logo_p6.png" (click)="redirectToArticlePage()" style="cursor: pointer;" width="200px" alt="logo" />
             <div class="flex gap-5 items-center" *ngIf="isOtherPage">
                 <a href="/articles" [ngClass]="{'text-[#6C5CCF]': currentUrl === '/articles'}">Articles</a>
                 <a href="/themes" [ngClass]="{'text-[#6C5CCF]': currentUrl === '/themes'}">Thèmes</a>
@@ -24,7 +24,7 @@
 
     <div *ngIf="isSmallScreen && isOtherPage" class="w-screen">
         <div class="flex items-center justify-between p-3">
-            <img src="/assets/logo_p6.png" width="150px" alt="logo" />
+            <img src="/assets/logo_p6.png" (click)="redirectToArticlePage()" style="cursor: pointer;" width="150px" alt="logo" />
             <mat-icon aria-hidden="false" aria-label="Ouvrir le menu de navigation" fontIcon="menu" (click)="toggleNavbarModal()" style="transform: scale(2); cursor: pointer;"></mat-icon>
         </div>
         <hr class="border-black opacity-100">
