--- a/front/src/app/pages/themes/themes.component.html
+++ b/front/src/app/pages/themes/themes.component.html
@@ -7,8 +7,7 @@
                 <h3 class="font-bold">{{ theme.title }}</h3>
                 <div class="flex flex-col items-center gap-4">
                     <p class="ellipsis">Description: {{ theme.description }}</p>
-                    <button *ngIf="!theme.subscribed" type="button" class="primary-btn" (click)="subscribeToTheme(theme.id!)">S'abonner</button>
-                    <button *ngIf="theme.subscribed" type="button" class="primary-btn" (click)="unsubscribeToTheme(theme.id!)">Se désabonner</button>
+                    <button type="button" class="primary-btn" (click)="subscribeToTheme(theme.id!)">S'abonner</button>
                 </div>
             </mat-card>
         </div>
