--- a/front/src/app/pages/articles/articles.component.html
+++ b/front/src/app/pages/articles/articles.component.html
@@ -13,7 +13,7 @@
         <div class="flex w-full">
             <p *ngIf="!articles || articles.length === 0">Il n'y a aucun article disponible pour le moment</p>
             <div class="w-full flex flex-wrap justify-between" [ngClass]="{'flex-col': isSmallScreen}">
-                <mat-card *ngFor="let article of articles" [routerLink]="['/articles/detail', article.id]" [ngStyle]="{'width': isLargeScreen ? 'calc(50% - 24px)' : '100%', 'margin-bottom': '24px'}" style="cursor: pointer;">
+                <mat-card *ngFor="let article of articles" [routerLink]="['/articles/detail/', article.id]" [ngStyle]="{'width': isLargeScreen ? 'calc(50% - 24px)' : '100%', 'margin-bottom': '24px'}" style="cursor: pointer;">
                     <h3 class="font-bold">{{ article.title }}</h3>
                     <div class="flex gap-12">
                         <p>{{ article.author }}</p>
