--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -2,12 +2,14 @@ h1 {
   font-size: 24px;
   font-weight: 400;
   line-height: 29.05px;
+  margin: 0;
 }
 
 a {
   font-size: 20px;
   font-weight: 400;
   line-height: 24.2px;
+  margin: 0;
 }
 
 p {
@@ -17,11 +19,8 @@ p {
   margin: 0;
 }
 
-.mat-card {
-  padding: 1em;
-  border-radius: 0.5em;
-  background-color: #F5F5F5;
-  box-shadow: none;
+textarea {
+  resize: none;
 }
 
 .custom-input {
@@ -55,15 +54,7 @@ p {
   }
 }
 
-.custom-disconnect-text {
-  font-size: 14px;
-  font-weight: 700;
-}
-
-.ellipsis {
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.mat-icon {
+  height: auto;
+  width: auto;
 }
