--- a/front/src/app/components/navbar/navbar.component.html
+++ b/front/src/app/components/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <div class="w-screen">
-    <div *ngIf="isSmallScreen && isLoginOrRegisterPage" class="w-full flex flex-col gap-6 px-12">
-        <mat-icon aria-hidden="false" aria-label="Retourner à la page home" routerLink="/" fontIcon="keyboard_backspace" style="transform: scale(2); cursor: pointer;"></mat-icon>
+    <div *ngIf="isSmallScreen && isLoginOrRegisterPage" class="w-full flex flex-col gap-6 px-6">
+        <mat-icon aria-hidden="false" aria-label="Retourner à la page principale" routerLink="/" fontIcon="keyboard_backspace" class="text-4xl" style="cursor: pointer;"></mat-icon>
         <div class="w-full flex justify-center">
-          <img src="/assets/logo_p6.png" (click)="redirectToArticlePage()" style="cursor: pointer;" width="300px" alt="logo" />
+          <img src="/assets/logo_p6.png" (click)="navigate('/articles')" style="cursor: pointer;" width="300px" alt="logo" />
         </div>
     </div>
 
     <div *ngIf="isLargeScreen" class="w-screen">
         <div class="flex justify-between items-center px-5">
-            <img src="/assets/logo_p6.png" (click)="redirectToArticlePage()" style="cursor: pointer;" width="200px" alt="logo" />
+            <img src="/assets/logo_p6.png" (click)="navigate('/articles')" style="cursor: pointer;" width="200px" alt="logo" />
             <div class="flex gap-5 items-center" *ngIf="isOtherPage">
                 <a href="/articles" [ngClass]="{'text-[#6C5CCF]': currentUrl === '/articles'}">Articles</a>
                 <a href="/themes" [ngClass]="{'text-[#6C5CCF]': currentUrl === '/themes'}">Thèmes</a>
@@ -24,16 +24,19 @@
 
     <div *ngIf="isSmallScreen && isOtherPage" class="w-screen">
         <div class="flex items-center justify-between p-3">
-            <img src="/assets/logo_p6.png" (click)="redirectToArticlePage()" style="cursor: pointer;" width="150px" alt="logo" />
+            <img src="/assets/logo_p6.png" (click)="navigate('/articles')" style="cursor: pointer;" width="150px" alt="logo" />
             <mat-icon aria-hidden="false" aria-label="Ouvrir le menu de navigation" fontIcon="menu" (click)="toggleNavbarModal()" style="transform: scale(2); cursor: pointer;"></mat-icon>
         </div>
         <hr class="border-black opacity-100">
-        <div *ngIf="openNavbarModal" [mat-dialog-close]="toggleNavbarModal()" class="fixed top-0 left-0 w-screen h-screen bg-gray-500 bg-opacity-50 flex items-center justify-center z-10">
-            <mat-dialog-content class="fixed top-0 right-0 h-screen w-2/3 bg-white px-5 py-12 border border-black">
-                <div class="flex flex-col gap-5 items-end">
-                    <a href="/articles">Articles</a>
-                    <a href="/themes">Thèmes</a>
+        <div *ngIf="openNavbarModal" (click)="toggleNavbarModal()" class="fixed top-0 left-0 w-screen h-screen bg-gray-500 bg-opacity-50 flex items-center justify-center z-10">
+            <mat-dialog-content class="fixed top-0 right-0 h-screen w-2/3 bg-white px-5 py-12 border border-black flex flex-col justify-between items-end">
+                <div class="flex flex-col gap-5">
+                    <a (click)="navigate('/articles')" >Articles</a>
+                    <a (click)="navigate('/themes')">Thèmes</a>
                 </div>
+                <a (click)="navigate('/profile')" class="flex items-center w-max bg-[#D9D9D9] rounded-full p-3 text-[#00000080]">
+                    <mat-icon aria-hidden="false" aria-label="Aller sur la page profil" fontIcon="person_outline" style="transform: scale(1.8);"></mat-icon>
+                </a>
             </mat-dialog-content>
         </div>
     </div>
