--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -58,3 +58,9 @@ textarea {
   height: auto;
   width: auto;
 }
+
+.custom-scrollbar {
+  height: 250px;
+  overflow-y: scroll;
+  scrollbar-color: #007;
+}
