[misc] - update & clean code

--- a/front/src/app/pages/article_detail/article-detail.component.html
+++ b/front/src/app/pages/article_detail/article-detail.component.html
@@ -1,9 +1,4 @@
-<div class="flex flex-col items-center justify-center gap-6" >
+<div class="w-screen flex flex-col items-center justify-center gap-6" >
     <app-navbar></app-navbar>
-    <div class="w-full flex flex-col items-start p-6 gap-12">
-      <app-article></app-article>
-      <div class="w-full flex items-center justify-center">
-        <app-create-comment-form></app-create-comment-form>
-      </div>
-    </div>
+    <app-article></app-article>
 </div>
