--- a/front/src/app/components/article/article.component.html
+++ b/front/src/app/components/article/article.component.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col gap-6">
+<section class="w-screen p-5 flex flex-col gap-5">
     <div class="w-full flex gap-6 items-start">
-        <mat-icon aria-hidden="false" aria-label="Retourner à la page des articles" routerLink="/articles" fontIcon="keyboard_backspace" style="transform: scale(2); cursor: pointer;"></mat-icon>
+        <mat-icon aria-hidden="false" aria-label="Retourner à la page des articles" routerLink="/articles" fontIcon="keyboard_backspace" class="text-4xl" style="cursor: pointer;"></mat-icon>
         <h2>{{ article?.title }}</h2>
     </div>
     <div class="flex flex-wrap gap-x-12 gap-y-3">
@@ -12,6 +12,6 @@
 
     <hr class="border-black" />
 
-    <h3>Commentaires</h3>
+    <h3 class="w-full">Commentaires</h3>
     <app-comments></app-comments>
-</div>
+</section>
