--- a/front/src/app/pages/articles/articles.component.html
+++ b/front/src/app/pages/articles/articles.component.html
@@ -11,7 +11,7 @@
         </section>
         <section class="flex w-full">
             <p *ngIf="!articles || articles.length === 0">Aucun article disponible pour le moment</p>
-            <div class="w-full flex flex-wrap justify-between" [ngClass]="{'flex-col': isSmallScreen}">
+            <div *ngIf="articles && articles.length > 0" class="w-full flex flex-wrap justify-between" [ngClass]="{'flex-col': isSmallScreen}">
                 <app-card 
                     *ngFor="let article of articles"
                     [link]="['/articles/detail', article.id!.toString()]"
