[misc] - add weglot for translations + pass all texts fr => en

--- a/front/src/app/components/article/article.component.html
+++ b/front/src/app/components/article/article.component.html
@@ -12,6 +12,6 @@
 
     <hr class="border-black" />
 
-    <h3 class="w-full">Commentaires</h3>
+    <h3 class="w-full">Comments</h3>
     <app-comments></app-comments>
 </section>
