--- a/front/src/app/components/form/create-comment/create-comment-form.component.html
+++ b/front/src/app/components/form/create-comment/create-comment-form.component.html
@@ -1,8 +1,8 @@
 <form *ngIf="isLargeScreen" [formGroup]="form" (ngSubmit)="submitComment()" class="w-screen p-5 flex items-center justify-center gap-5">
   <div class="w-2/4 flex flex-col">
-    <textarea matInput formControlName="content" class="w-full custom-input h-20" placeholder="Écrivez ici votre commentaire"></textarea>
+    <textarea matInput formControlName="content" class="w-full custom-input h-20" placeholder="Write your comment here"></textarea>
     <mat-error *ngIf="submitted && form.get('content')?.hasError('required')" class="text-xs mt-1">
-      Ce champ est requis.
+      Content is required.
     </mat-error>
   </div>
   <div class="flex items-center">
@@ -19,9 +19,9 @@
 <form *ngIf="isSmallScreen" [formGroup]="form" (ngSubmit)="submitComment()" class="w-screen custom-input bg-white fixed bottom-0 left-0 right-0">
   <div class="flex">
     <div class="w-full flex flex-col">
-      <textarea matInput formControlName="content" class="h-20" placeholder="Écrivez ici votre commentaire"></textarea>
+      <textarea matInput formControlName="content" class="h-20" placeholder="Write your comment here"></textarea>
       <mat-error *ngIf="submitted && form.get('content')?.hasError('required')" class="text-xs mt-1">
-        Ce champ est requis.
+        Content is required.
       </mat-error>
     </div>
     <button type="submit" [disabled]="loading">
