--- a/front/src/app/components/themeList/theme-list.component.html
+++ b/front/src/app/components/themeList/theme-list.component.html
@@ -1,11 +1,11 @@
 <div class="w-full flex flex-wrap justify-between p-5 gap-5" [ngClass]="{'flex-col': isSmallScreen}">
-    <p *ngIf="!themes || themes.length === 0">Aucun theme disponible pour le moment</p>
+    <p *ngIf="!themes || themes.length === 0">No theme available at the moment</p>
     <div *ngIf="themes && themes.length > 0" class="w-full flex flex-wrap justify-between" [ngClass]="{'flex-col': isSmallScreen}">
         <app-card
             *ngFor="let theme of themes"
             [title]="theme.title"
             [content]="theme.description"
-            [buttonText]="currentUrl === '/themes' ? 'S\'abonner' : 'Se désabonner'"
+            [buttonText]="currentUrl === '/themes' ? 'Subscribe' : 'Unsubscribe'"
             (buttonClick)="currentUrl === '/themes' ? subscribeToTheme(theme.id!) : unsubscribeToTheme(theme.id!)">
         </app-card>
     </div>
