Revert "feature/CA-02-frontend"

--- a/front/src/app/pages/home/home.component.scss
+++ b/front/src/app/pages/home/home.component.scss
@@ -1,5 +1,7 @@
-.github-link {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1em;
+.center {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
