--- a/front/src/app/pages/Profile/profilePage.component.html
+++ b/front/src/app/pages/Profile/profilePage.component.html
@@ -2,7 +2,7 @@
     <app-base-navbar-component></app-base-navbar-component>
     <div class="w-screen flex flex-col items-center p-5 gap-5 text-center">
         <h2 class="font-bold">User profile</h2>
-        <app-profile-form></app-profile-form>
+        <app-profile-form-component></app-profile-form-component>
         <p class="text-red-800 custom-disconnect-text" style="cursor: pointer;" (click)="logout()">Disconnect</p>
 
         <hr class="w-full border-black opacity-100 mx-12">
