[fix] - theme card feed in profile bug

--- a/front/src/app/pages/Profile/profilePage.component.html
+++ b/front/src/app/pages/Profile/profilePage.component.html
@@ -8,6 +8,8 @@
         <hr class="w-full border-black opacity-100 mx-12">
 
         <h2 class="font-bold">Subscriptions</h2>
-        <app-theme-feed-component></app-theme-feed-component>
+        <div class="w-screen flex flex-col p-5 gap-5">
+            <app-theme-feed-component></app-theme-feed-component>
+        </div>
     </div>
 </section>
