[fix] - create article page responsive bug

--- a/front/src/app/pages/CreateArticle/createArticle.page.html
+++ b/front/src/app/pages/CreateArticle/createArticle.page.html
@@ -1,7 +1,7 @@
-<section class="flex flex-col items-center justify-center">
+<section class="flex flex-col items-center justify-start">
     <app-base-navbar></app-base-navbar>
-    <div class="w-screen flex flex-col p-5 gap-5">
-        <mat-icon aria-hidden="false" aria-label="Back to home page" routerLink="/" fontIcon="keyboard_backspace" style="transform: scale(2); cursor: pointer;" class="md:absolute"></mat-icon>
+    <div class="w-full flex flex-col p-5 gap-5">
+        <mat-icon aria-hidden="false" aria-label="Back to home page" routerLink="/" fontIcon="keyboard_backspace" class="text-4xl" style="cursor: pointer;"></mat-icon>
         <h2 class="text-center">Create new article</h2>
         <app-create-article-form></app-create-article-form>
     </div>
