--- a/front/src/app/pages/Articles/articles.page.html
+++ b/front/src/app/pages/Articles/articles.page.html
@@ -1,6 +1,6 @@
-<div class="flex flex-col items-center justify-center" >
+<div class="flex flex-col items-center justify-center" [ngStyle]="{'box-sizing': 'border-box', 'overflow-x': 'hidden'}" >
     <app-base-navbar></app-base-navbar>
-    <div class="w-screen flex flex-col p-5 gap-5">
+    <div class="w-full flex flex-col p-5 gap-5">
         <section class="w-full flex items-center justify-between gap-5" [ngClass]="{'flex-col': isSmallScreen}">
             <button type="button" class="primary-btn" routerLink="/articles/create" >Create article</button>
             <div class="flex items-center gap-2" (click)="sortArticles()" style="cursor: pointer;">
