--- a/front/src/app/pages/Themes/themes.page.html
+++ b/front/src/app/pages/Themes/themes.page.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-center">
+<div class="flex flex-col items-center justify-center" [ngStyle]="{'box-sizing': 'border-box', 'overflow-x': 'hidden'}">
     <app-base-navbar></app-base-navbar>
     <app-theme-feed></app-theme-feed>
 </div>
