[fix] - remove overflow for fix horizontal scroll

--- a/front/src/app/pages/Articles/articles.page.html
+++ b/front/src/app/pages/Articles/articles.page.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-center" [ngStyle]="{'box-sizing': 'border-box', 'overflow-x': 'hidden'}" >
+<div class="flex flex-col items-center justify-center">
     <app-base-navbar></app-base-navbar>
     <div class="w-full flex flex-col p-5 gap-5">
         <section class="w-full flex items-center justify-between gap-5" [ngClass]="{'flex-col': isSmallScreen}">
