--- a/front/src/app/components/Base/BaseNavbar/baseNavbar.component.html
+++ b/front/src/app/components/Base/BaseNavbar/baseNavbar.component.html
@@ -5,7 +5,7 @@
     </div>
 </section>
 
-<section *ngIf="isLargeScreen" class="w-screen">
+<section *ngIf="isLargeScreen" class="w-full">
     <div class="flex justify-between items-center px-5">
         <img src="/assets/logo_p6.png"  routerLink="/articles" style="cursor: pointer;" width="200px" alt="logo" />
         <div class="flex gap-5 items-center" *ngIf="isOtherPage">
@@ -21,14 +21,14 @@
     <hr class="border-black opacity-100">
 </section>
 
-<section *ngIf="isSmallScreen && isOtherPage" class="w-screen">
+<section *ngIf="isSmallScreen && isOtherPage" class="w-full">
     <div class="flex items-center justify-between p-3">
         <img src="/assets/logo_p6.png" routerLink='/articles' style="cursor: pointer;" width="150px" alt="logo" />
         <mat-icon aria-hidden="false" aria-label="Open navigation menu" fontIcon="menu" (click)="toggleNavbarModal()" class="text-4xl" style="cursor: pointer;"></mat-icon>
     </div>
     <hr class="border-black opacity-100">
-    <div *ngIf="openNavbarModal" (click)="toggleNavbarModal()" class="fixed top-0 left-0 w-screen h-screen bg-gray-500 bg-opacity-50 flex items-center justify-center z-10">
-        <mat-dialog-content class="fixed top-0 right-0 h-screen w-2/3 bg-white px-5 py-12 border border-black flex flex-col justify-between items-end">
+    <div *ngIf="openNavbarModal" (click)="toggleNavbarModal()" class="fixed top-0 left-0 w-full h-full bg-gray-500 bg-opacity-50 flex items-center justify-center z-10">
+        <mat-dialog-content class="fixed top-0 right-0 h-full w-2/3 bg-white px-5 py-12 border border-black flex flex-col justify-between items-end">
             <div class="flex flex-col gap-5">
                 <a routerLink='/articles'>Articles</a>
                 <a routerLink='/themes'>Themes</a>
