--- a/front/src/app/pages/ArticleDetail/articleDetail.page.html
+++ b/front/src/app/pages/ArticleDetail/articleDetail.page.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center justify-center gap-6" [ngStyle]="{'box-sizing': 'border-box', 'overflow-x': 'hidden'}">
+<div class="flex flex-col items-center justify-center gap-6">
     <app-base-navbar></app-base-navbar>
     <app-article-detail-component></app-article-detail-component>
     <app-comment-feed></app-comment-feed>
